--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -26,4 +26,13 @@
 .options {
   background-color: var(--secondary);
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  width: 95%;
+}
+
+button {
+  width: 100%;
+  margin: 5px;
 }
