--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -45,7 +45,7 @@ button {
   margin-top: 5px;
   margin-bottom: 5px;
   border: solid;
-  width: 50%;
+  width: 30%;
 }
 
 .genres {
@@ -57,7 +57,6 @@ button {
 #app {
   display: flex;
   flex-direction: column;
-  width: 50%;
 }
 
 .album-cover {
@@ -66,6 +65,7 @@ button {
   height: 70%;
   object-fit: cover;
   margin: 7px;
+  box-shadow: 0px 0px 15px;
 }
 
 .description {
@@ -74,4 +74,18 @@ button {
 
 body {
   background-image: linear-gradient(var(--secondary), var(--primary));
+}
+
+button {
+  background-color: seagreen;
+  transition: 0.2s;
+  padding: 5px;
+  border-radius: 10px;
+  border: 2px solid;
+  margin-left: 7px;
+  margin-right: 7px;
+}
+
+button:hover {
+  scale: 1.05;
 }
